# encircuit

./: CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
encircuit/: Cargo.toml
encircuit/examples/: macro_demo.rs
encircuit/src/: ciphertext.rs  keys.rs  lib.rs  params.rs  prelude.rs
encircuit/src/circuit/: builder.rs  circuit.rs  encrypted.rs  mod.rs
encircuit/src/tests/: ciphertext.rs  circuit.rs  fixtures.rs  integration.rs  keys.rs  mod.rs  params.rs
encircuit_macros/: Cargo.toml  README.md
encircuit_macros/src/: lib.rs
encircuit_macros/tests/: integration_tests.rs
