[workspace]
members = [
    "encircuit",
    "encircuit_macros",
]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/lucenor/encircuit"
description = "Zero-overhead Rust toolkit for building, encrypting & evaluating fully homomorphic (FHE) circuits"

[workspace.dependencies]
# Core FHE library
tfhe = "1.3.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelization
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Procedural macros (for encircuit_macros)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Development dependencies
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true