[workspace]
members = [
    "encircuit",
    "encircuit_macros",
]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/lucenor/encircuit"
homepage = "https://github.com/lucenor/encircuit"
description = "Zero-overhead Rust toolkit for building, encrypting & evaluating fully homomorphic (FHE) circuits"
keywords = ["fhe", "cryptography", "homomorphic", "encryption"]
categories = ["cryptography"]
exclude = [".gitignore", ".cargo/config", ".github"]

[workspace.dependencies]
# Core FHE library
tfhe = { version = "1.3.1", features = ["boolean"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Parallelization
rayon = "1.10.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Procedural macros (for encircuit_macros)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Development dependencies
criterion = "0.6.0"
proptest = "1.7.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true