[package]
name = "encircuit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = ["boolean", "parallel", "serde"]
boolean = []
integer8 = []
parallel = ["dep:rayon"]
gpu = ["tfhe/gpu"]
serde = ["dep:serde", "dep:serde_json"]
macros = ["dep:encircuit_macros"]

[dependencies]
tfhe.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Optional dependencies
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
encircuit_macros = { path = "../encircuit_macros", optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

# Examples showcasing macro integration
[[example]]
name = "macro_demo"
required-features = ["macros"]
